// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListEditorField function should return <FreeTextListEditor> with specified props 1`] = `
<FreeTextListEditor
  error={true}
  errorText="test1"
  maxInputLength={100}
  onChange={[MockFunction]}
  remindToAdd="test2"
  state={
    {
      "error": "test1",
    }
  }
/>
`;

exports[`ListEditorField function should return <FreeTextListEditor> with specified props 2`] = `
<FreeTextListEditor
  error={false}
  maxInputLength={100}
  onChange={[MockFunction]}
  remindToAdd="test2"
/>
`;
